--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
+    "tsarch": "^5.4.0",
     "typescript": "^5.7.2"
   }
 }
