add open telemetry

--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
     "clean": "rimraf out && rimraf coverage",
     "build": "tsc",
     "start": "node -r tsconfig-paths/register --env-file=.env out/main.js",
+    "start:otel": "node -r tsconfig-paths/register --env-file=.env -r ./out/shared/otel/index.js out/main.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --env-file=.env src/main.ts",
+    "dev:otel": "ts-node-dev -r tsconfig-paths/register --env-file=.env -r ./src/shared/otel/index.ts src/main.ts",
     "test": "jest --runInBand",
     "test:coverage": "jest --runInBand --coverage",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.60.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.202.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.202.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.202.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-logs": "^0.202.0",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.202.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "env-var": "^7.5.0",
