--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "baseUrl": ".",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
     "paths": {
       "@/core/*": ["./src/core/*", "./out/core/*"],
       "@/infrastructure/*": ["./src/infrastructure/*", "./out/infrastructure/*"],
