--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-SERVER_BASE_ROUTE='/api/template-service'
-SERVER_PORT=3000
+NODE_ENV=development
+SERVER_PORT=4000
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:4318/v1/traces
+OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://localhost:4318/v1/metrics
+OTEL_EXPORTER_OTLP_LOGS_ENDPOINT=http://localhost:4318/v1/logs
+LOG_LEVEL=info
