--- a/.github/workflows/coverage-push.yml
+++ b/.github/workflows/coverage-push.yml
@@ -1,4 +1,4 @@
-name: Test and Push Coverage
+name: Test and Commit Coverage Badge
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  test-and-push-coverage:
+  test-and-commit-coverage:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,10 +23,18 @@ jobs:
       - name: Run tests with coverage
         run: yarn test:coverage
 
-      - name: Push coverage to branch
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./coverage
-          publish_branch: coverage-report
-          force_orphan: true 
+      - name: Generate coverage badge JSON
+        run: |
+          mkdir -p .coverage
+          COVERAGE=$(jq '.total.lines.pct' coverage/coverage-summary.json)
+          echo "{\"schemaVersion\":1,\"label\":\"coverage\",\"message\":\"${COVERAGE}%\",\"color\":\"brightgreen\"}" > .coverage/coverage-badge.json
+
+      - name: Commit and push coverage badge
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .coverage/coverage-badge.json
+          git commit -m "chore: update coverage badge [skip ci]" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
